# learning-policy-spaces

./: .gitignore  compute-canada-reqs.txt  config.py  main_dataset.py  main_joint_dataset.py  main_latent_search.py  main_syntax_checker.py  main_trainer.py  pyproject.toml  requirements.txt  run.sh  slurm.py
data/program_dataset/: id.txt
dsl/: __init__.py  base.py  dsl.py  functional_wrapper.py  production.py  program_generator.py  syntax_checker.py  syntax_checker_original.py
karel/: world.py  world_batch.py  world_generator.py  world_original.py  world_task.py
logger/: logger.py
scripts/: update_aim.sh  update_artifacts.sh  update_params.sh
search/: bottom_up.py  encoder_only_search.py  latent_search.py  search_methods.py  search_tools.py
tasks/: __init__.py  clean_house.py  clean_house_sparse.py  corridor_runner.py  door_key.py  empty.py  find_marker.py  find_marker_sparse.py  four_corners.py  four_corners_sparse.py  harvester.py  harvester_sparse.py  maze.py  maze_sparse.py  one_stroke.py  seeder.py  seeder_sparse.py  snake.py  stair_climber.py  stair_climber_sparse.py  task.py  top_off.py  top_off_sparse.py
tasks/policy/: policy_.py
utils/: experiment_result.py  hash.py  io.py  losses.py  math.py  metadata.py  models.py  parse_config.py  path_consts.py  plotting.py  policy.py  program.py  registry.py  rng.py  slurm.py  stats.py  traversal.py
vae/: program_dataset.py  trainer.py  utils.py
vae/models/: __init__.py  base_vae.py  leaps_vae.py  prog_prob_vae.py  strimmed_vae.py
